--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -183,66 +183,86 @@ html body main #settings-container #settings-content li p {
   margin-top: -20px;
   margin-right: 10px;
 }
-html body main #settings-container #settings-content li #change-language #set-lang-text {
+html body main #settings-container #settings-content #change-language #set-lang-text {
   display: none;
 }
-html body main #settings-container #settings-content li #change-language:hover #set-lang-text {
+html body main #settings-container #settings-content #change-language:hover #set-lang-text {
   display: block;
 }
-html body main #settings-container #settings-content li #notification #set-note-on {
+html body main #settings-container #settings-content #notification #set-note-on {
   display: block;
 }
-html body main #settings-container #settings-content li #notification #set-note-urgent {
+html body main #settings-container #settings-content #notification #set-note-urgent {
   display: none;
 }
-html body main #settings-container #settings-content li #notification #set-note-off {
+html body main #settings-container #settings-content #notification #set-note-off {
   display: none;
 }
-html body main #settings-container #settings-content li #notification #set-note-text {
+html body main #settings-container #settings-content #notification #set-note-text {
   display: none;
 }
-html body main #settings-container #settings-content li #notification:hover #set-note-text {
+html body main #settings-container #settings-content #notification:hover #set-note-text {
   display: block;
 }
-html body main #settings-container #settings-content li #update #set-up-text {
+html body main #settings-container #settings-content #update #set-up-text {
   display: none;
 }
-html body main #settings-container #settings-content li #update:hover #set-up-text {
+html body main #settings-container #settings-content #update:hover #set-up-text {
   display: block;
 }
-html body main #settings-container #settings-content li #update-failed {
+html body main #settings-container #settings-content #update-failed {
   display: none;
 }
-html body main #settings-container #settings-content li #update-failed #set-up-text-failed {
+html body main #settings-container #settings-content #update-failed #set-up-text-failed {
   display: none;
   color: var(--error-banner-icon);
 }
-html body main #settings-container #settings-content li #update-failed:hover #set-up-text-failed {
+html body main #settings-container #settings-content #update-failed:hover #set-up-text-failed {
   display: block;
 }
-html body main #settings-container #settings-content li #download #set-dow-text {
+html body main #settings-container #settings-content #update-none {
   display: none;
 }
-html body main #settings-container #settings-content li #download:hover #set-dow-text {
+html body main #settings-container #settings-content #update-none #set-up-text-none {
+  display: none;
+  color: var(--error-banner-icon);
+}
+html body main #settings-container #settings-content #update-none:hover #set-up-text-none {
+  display: block;
+}
+html body main #settings-container #settings-content #download #set-dow-text {
+  display: none;
+}
+html body main #settings-container #settings-content #download:hover #set-dow-text {
   display: block;
   color: var(--bg-main-button);
 }
-html body main #settings-container #settings-content li #comment-settings #set-comm-text {
+html body main #settings-container #settings-content #download-failed {
   display: none;
 }
-html body main #settings-container #settings-content li #comment-settings:hover #set-comm-text {
+html body main #settings-container #settings-content #download-failed #set-dow-text-failed {
+  display: none;
+  color: var(--error-banner-icon);
+}
+html body main #settings-container #settings-content #download-failed:hover #set-dow-text-failed {
   display: block;
 }
-html body main #settings-container #settings-content li #developer #set-dev-text {
+html body main #settings-container #settings-content #comment-settings #set-comm-text {
   display: none;
 }
-html body main #settings-container #settings-content li #developer:hover #set-dev-text {
+html body main #settings-container #settings-content #comment-settings:hover #set-comm-text {
   display: block;
 }
-html body main #settings-container #settings-content li #more-settings #set-more-text {
+html body main #settings-container #settings-content #developer #set-dev-text {
   display: none;
 }
-html body main #settings-container #settings-content li #more-settings:hover #set-more-text {
+html body main #settings-container #settings-content #developer:hover #set-dev-text {
+  display: block;
+}
+html body main #settings-container #settings-content #more-settings #set-more-text {
+  display: none;
+}
+html body main #settings-container #settings-content #more-settings:hover #set-more-text {
   display: block;
 }
 html body main form {
