Updated settings download icon

--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -251,15 +251,8 @@ html body {
                         margin-top: 5px;
                         margin-left: -1px;
                     }
-                    #updateInfo {
+                    #settingsUpdateIcon {
                         display: none;
-                        position: relative;
-                        top: 22px;
-                        left: -3px;
-                        width: 7px;
-                        height: 7px;
-                        border-radius: 5px;
-                        background-color: var(--bg-main-button);
                     }
                     p {
                         margin-top: 5px;
