--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -288,15 +288,8 @@ html body nav #side-bar footer .settings img {
   margin-top: 5px;
   margin-left: -1px;
 }
-html body nav #side-bar footer .settings #updateInfo {
+html body nav #side-bar footer .settings #settingsUpdateIcon {
   display: none;
-  position: relative;
-  top: 22px;
-  left: -3px;
-  width: 7px;
-  height: 7px;
-  border-radius: 5px;
-  background-color: var(--bg-main-button);
 }
 html body nav #side-bar footer .settings p {
   margin-top: 5px;
