Updated download function

--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -225,7 +225,7 @@ html body main #settings-container #settings-content #update-none {
 }
 html body main #settings-container #settings-content #update-none #set-up-text-none {
   display: none;
-  color: var(--error-banner-icon);
+  color: var(--success-color);
 }
 html body main #settings-container #settings-content #update-none:hover #set-up-text-none {
   display: block;
