--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -19,6 +19,18 @@ html {
             border-top-left-radius: 10px;
 
             background-color: var(--main-color);
+
+            /* .container-blob {
+                position: absolute;
+                background-color: #ffcc80;
+                width: 70px;
+                height: 70px;
+                border-radius: 50%;
+                bottom: 0;
+                left: 0;
+                transform: translateX(-50%);
+            } */
+
             #profile-container {
                 position: absolute;
                 top: 15px;
