Added profile quick selection

--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -344,6 +344,54 @@ html body main form #main-content #login-data {
 html body main form #main-content #login-data input {
   margin-top: -8px;
 }
+html body main form #main-content #login-data #username #username-form {
+  width: 160px;
+  padding-right: 40px;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton {
+  position: absolute;
+  display: block;
+  border: none;
+  outline: none;
+  background: none;
+  margin-top: -29.5px;
+  margin-left: 176px;
+  width: 28px;
+  height: 24px;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton:hover {
+  background-color: var(--input-cross);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton:active {
+  opacity: 0.8;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton #profileDropdownImage {
+  margin-top: 2px;
+  margin-left: 4px;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent {
+  display: block;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 html body main form #main-content #login-data #password {
   margin-left: 49px;
 }
