--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -315,6 +315,54 @@ html {
                         input {
                             margin-top: -8px;
                         }
+                        #username {
+                            #username-form {
+                                width: 160px;
+                                padding-right: 40px;
+                            }
+                            #profileDropdown {
+                                #profileDropdownButton {
+                                    position: absolute;
+                                    display: block;
+                                    border: none;
+                                    outline: none;
+                                    background: none;
+                                    margin-top: -29.5px;
+                                    margin-left: 176px;
+                                    width: 28px;
+                                    height: 24px;
+                                    border-radius: 5px;
+                                    cursor: pointer;
+                                    transition: .2s;
+                                    &:hover {
+                                        background-color: var(--input-cross);
+                                        transition: .2s;
+                                    }
+                                    &:active {
+                                        opacity: .8;
+                                        transition: .2s;
+                                    }
+                                    #profileDropdownImage {
+                                        margin-top: 2px;
+                                        margin-left: 4px;
+                                    }
+                                } 
+                                #profileDropdownContent {
+                                    display: none;
+                                    position: absolute;
+                                    background-color: #f1f1f1;
+                                    min-width: 160px;
+                                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                                    z-index: 1;
+                                    a {
+                                        color: black;
+                                        padding: 12px 16px;
+                                        text-decoration: none;
+                                        display: block;
+                                    }
+                                }
+                            }
+                        }
                         #password {
                             margin-left: 49px;
                             #password-form {
