--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -348,14 +348,21 @@ html body main form #main-content #login-data #username #username-form {
   width: 160px;
   padding-right: 40px;
 }
-html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton {
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain {
+  position: absolute;
+  margin-top: -2px;
+  margin-left: 180px;
+  height: 10px;
+  width: 20px;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton {
   position: absolute;
   display: block;
   border: none;
   outline: none;
   background: none;
-  margin-top: -29.5px;
-  margin-left: 176px;
+  margin-top: -28px;
+  margin-left: -3px;
   width: 28px;
   height: 24px;
   border-radius: 5px;
@@ -363,33 +370,61 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton:hover {
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton:hover {
   background-color: var(--input-cross);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton:active {
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton:active {
   opacity: 0.8;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body main form #main-content #login-data #username #profileDropdown #profileDropdownButton #profileDropdownImage {
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton #profileDropdownImage {
   margin-top: 2px;
-  margin-left: 4px;
+  margin-left: -2px;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent {
-  display: block;
+  display: none;
   position: absolute;
+  width: 150px;
+  margin-top: 0px;
+  left: 156px;
+  border: 1px solid var(--info-banner-border);
   background-color: #f1f1f1;
-  min-width: 160px;
+  border-radius: 5px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:first-child {
+  margin-top: 5px;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:nth-child(3) {
+  margin-bottom: 5px;
+}
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 5px;
+  padding: 10px;
+  margin-left: 5px;
+  border-radius: 5px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:hover {
+  background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:active {
+  background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #profileDropdown:hover #profileDropdownContent {
   display: block;
 }
 html body main form #main-content #login-data #password {
