--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -321,45 +321,76 @@ html {
                                 padding-right: 40px;
                             }
                             #profileDropdown {
-                                #profileDropdownButton {
+                                #profileDropdownMain {
                                     position: absolute;
-                                    display: block;
-                                    border: none;
-                                    outline: none;
-                                    background: none;
-                                    margin-top: -29.5px;
-                                    margin-left: 176px;
-                                    width: 28px;
-                                    height: 24px;
-                                    border-radius: 5px;
-                                    cursor: pointer;
-                                    transition: .2s;
-                                    &:hover {
-                                        background-color: var(--input-cross);
+                                    margin-top: -2px;
+                                    margin-left: 180px;
+                                    height: 10px;
+                                    width: 20px;
+                                    #profileDropdownButton {
+                                        position: absolute;
+                                        display: block;
+                                        border: none;
+                                        outline: none;
+                                        background: none;
+                                        margin-top: -28px;
+                                        margin-left: -3px;
+                                        width: 28px;
+                                        height: 24px;
+                                        border-radius: 5px;
+                                        cursor: pointer;
                                         transition: .2s;
+                                        &:hover {
+                                            background-color: var(--input-cross);
+                                            transition: .2s;
+                                        }
+                                        &:active {
+                                            opacity: .8;
+                                            transition: .2s;
+                                        }
+                                        #profileDropdownImage {
+                                            margin-top: 2px;
+                                            margin-left: -2px;
+                                        }
                                     }
-                                    &:active {
-                                        opacity: .8;
-                                        transition: .2s;
-                                    }
-                                    #profileDropdownImage {
-                                        margin-top: 2px;
-                                        margin-left: 4px;
-                                    }
-                                } 
+                                }
+                                
                                 #profileDropdownContent {
                                     display: none;
                                     position: absolute;
+                                    width: 150px;
+                                    margin-top: 0px;
+                                    left: 156px;                                    
+                                    border: 1px solid var(--info-banner-border);
                                     background-color: #f1f1f1;
-                                    min-width: 160px;
+                                    border-radius: 5px;
                                     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                                     z-index: 1;
-                                    a {
-                                        color: black;
-                                        padding: 12px 16px;
-                                        text-decoration: none;
-                                        display: block;
+                                    a:first-child {
+                                        margin-top: 5px;
                                     }
+                                    a:nth-child(3) {
+                                        margin-bottom: 5px;
+                                    }
+                                    a {
+                                        display: flex;
+                                        margin-right: 5px;
+                                        padding: 10px;
+                                        margin-left: 5px;
+                                        border-radius: 5px;
+                                        transition: .2s;
+                                        &:hover {
+                                            background-color: var(--nav-hyperlink);
+                                            transition: .2s;
+                                        }
+                                        &:active {
+                                            background-color: var(--nav-hyperlink-active);
+                                            transition: .2s;
+                                        }
+                                    }
+                                }
+                                &:hover #profileDropdownContent {
+                                    display: block;
                                 }
                             }
                         }
