--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -391,11 +391,13 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   margin-top: 0px;
   left: 156px;
   border: 1px solid var(--info-banner-border);
-  background-color: #f1f1f1;
+  background-color: var(--dropdown-bg);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border-radius: 5px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 2;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:first-child {
   margin-top: 5px;
