--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -362,10 +362,11 @@ html {
                                     margin-top: 0px;
                                     left: 156px;                                    
                                     border: 1px solid var(--info-banner-border);
-                                    background-color: #f1f1f1;
+                                    background-color: var(--dropdown-bg);
+                                    backdrop-filter: blur(100px);
                                     border-radius: 5px;
                                     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                                    z-index: 1;
+                                    z-index: 2;
                                     a:first-child {
                                         margin-top: 5px;
                                     }
