--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -380,9 +380,16 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton #profileDropdownImage {
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton .profileDropdownImage {
   margin-top: 2px;
   margin-left: -2px;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton #profileDropdownImage {
+  display: none;
+}
+html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton #profileDropdownImageNoFocus {
+  display: block;
+  color: #707070;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent {
   display: none;
