--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -348,9 +348,16 @@ html {
                                             opacity: .8;
                                             transition: .2s;
                                         }
-                                        #profileDropdownImage {
+                                        .profileDropdownImage {
                                             margin-top: 2px;
                                             margin-left: -2px;
+                                        }
+                                        #profileDropdownImage {
+                                            display: none;
+                                        }
+                                        #profileDropdownImageNoFocus {
+                                            display: block;
+                                            color: #707070;
                                         }
                                     }
                                 }
