--- a/REWORK/src/stylesheet/main/color.css
+++ b/REWORK/src/stylesheet/main/color.css
@@ -1,4 +1,5 @@
 .light {
+    --selection-bg-color: rgb(181, 210, 247);
     --background-color: #F3F3F3;
     --main-color: #F9F9F9;
     --border-color: #DFDFDF;
@@ -81,10 +82,11 @@
 }
 
 .light ::selection {
-    background: rgb(181, 210, 247);
+    background: var(--selection-bg-color);
   }
 
 .dark {
+    --selection-bg-color: rgb(48, 92, 150);
     --background-color: #1C1C1C;
     --main-color: #202020;
     --border-color: #303030;
@@ -165,5 +167,5 @@
 }
 
 .dark ::selection {
-    background: rgb(48, 92, 150);
+    background: var(--selection-bg-color);
 }
