Changed maximize & restore behaviour

--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -7,9 +7,7 @@ html body {
 html body img {
   width: var(--img-size);
   height: var(--img-size);
-  -moz-user-select: none;
-   -ms-user-select: none;
-       user-select: none;
+  user-select: none;
   -webkit-user-select: none;
   -webkit-user-drag: none;
   -webkit-app-region: no-drag;
@@ -19,31 +17,9 @@ html body a {
   text-decoration: none;
   cursor: pointer;
 }
-@-webkit-keyframes round {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-    border-radius: 50%;
-    width: 170px;
-    height: 150px;
-  }
-  50% {
-    border-radius: 40%;
-    width: 140px;
-    height: 120px;
-  }
-  100% {
-    border-radius: 50%;
-    width: 170px;
-    height: 150px;
-    -webkit-transform: rotate(365deg);
-            transform: rotate(365deg);
-  }
-}
 @keyframes round {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
     border-radius: 50%;
     width: 170px;
     height: 150px;
@@ -57,8 +33,7 @@ html body a {
     border-radius: 50%;
     width: 170px;
     height: 150px;
-    -webkit-transform: rotate(365deg);
-            transform: rotate(365deg);
+    transform: rotate(365deg);
   }
 }
 html body .small-cursor {
@@ -69,14 +44,11 @@ html body .small-cursor {
   width: 170px;
   height: 150px;
   background: var(--mouse-color);
-  -webkit-filter: blur(85px);
-          filter: blur(85px);
+  filter: blur(85px);
   border-radius: 50%;
   pointer-events: none;
-  -webkit-transition: 1s ease-out;
   transition: 1s ease-out;
-  -webkit-animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
-          animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+  animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
 }
 html body .medium-title {
   font-size: var(--medium-text);
@@ -107,7 +79,6 @@ html body .medium-form, html body .big-form {
   border-bottom: 1px solid var(--input-border-bot-color);
   border-radius: 5px;
   font-size: 14px;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .medium-form:hover, html body .big-form:hover {
@@ -115,7 +86,6 @@ html body .medium-form:hover, html body .big-form:hover {
   background-color: var(--input-bg-hover-color);
   border: 1px solid var(--input-border-color);
   border-bottom: 1px solid var(--input-border-bot-hover-color);
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .medium-form:active, html body .medium-form:focus, html body .big-form:active, html body .big-form:focus {
@@ -125,7 +95,6 @@ html body .medium-form:active, html body .medium-form:focus, html body .big-form
   background-color: var(--input-bg-active-color);
   border: 1px solid var(--input-border-active-color);
   border-bottom: 2px solid var(--input-border-bot-active-color);
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .info {
@@ -148,8 +117,7 @@ html body header #drag-region {
   left: 0;
   width: 100%;
   height: 31px;
-  -webkit-backdrop-filter: blur(100px);
-          backdrop-filter: blur(100px);
+  backdrop-filter: blur(100px);
   z-index: 3;
   -ms-overflow-style: scrollbar;
   -webkit-app-region: drag;
@@ -167,8 +135,6 @@ html body header #drag-region #window-title span {
 }
 html body header #drag-region #window-controls {
   -webkit-app-region: no-drag;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: absolute;
   top: 0;
@@ -190,7 +156,7 @@ html body header #drag-region #window-controls #minBtn:hover, html body header #
 html body header #drag-region #window-controls #closeBtn:hover {
   background-color: var(--window-close-hover);
 }
-html body header #drag-region #window-controls #maxBtn {
+html body header #drag-region #window-controls #restoreBtn {
   display: none;
 }
 html body nav #side-bar {
@@ -200,11 +166,9 @@ html body nav #side-bar {
   left: 0;
   width: 320px;
   height: 100vh;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
   font-size: var(--font-size);
-  -webkit-backdrop-filter: blur(100px);
-          backdrop-filter: blur(100px);
+  backdrop-filter: blur(100px);
   z-index: 3;
 }
 html body nav #side-bar .comment #runIcon {
@@ -218,7 +182,6 @@ html body nav #side-bar #active {
 }
 html body nav #side-bar #active:active {
   background-color: var(--nav-selected-active);
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar #active .line {
@@ -235,25 +198,20 @@ html body nav #side-bar #active #settingsIcon, html body nav #side-bar #active #
   margin-left: -4px;
 }
 html body nav #side-bar a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-left: 5px;
   margin-right: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 5px;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a:hover {
   background-color: var(--nav-hyperlink);
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a:active {
   background-color: var(--nav-hyperlink-active);
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a img {
@@ -307,12 +265,9 @@ html body .banner {
   height: 46px;
   font-size: 14px;
   border-radius: 3px;
-  -webkit-backdrop-filter: blur(50px);
-          backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);
 }
 html body .banner .banner-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 13px;
   margin-left: 15px;
@@ -388,17 +343,15 @@ html body #error-banner-wifi #error-hide {
   color: var(--text-color);
   background-color: var(--error-banner-button);
   cursor: pointer;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body #error-banner-wifi #error-hide:hover {
   opacity: 0.9;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body #error-banner-wifi #error-hide:active {
   opacity: 0.75;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+
 /*# sourceMappingURL=main.css.map */
