--- a/REWORK/src/stylesheet/main/main/main.scss
+++ b/REWORK/src/stylesheet/main/main/main.scss
@@ -157,7 +157,7 @@ html body {
                 #closeBtn:hover {
                     background-color: var(--window-close-hover);
                 }
-                #maxBtn {
+                #restoreBtn {
                     display: none;
                 }
             }
