--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -7,7 +7,9 @@ html body {
 html body img {
   width: var(--img-size);
   height: var(--img-size);
-  user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
   -webkit-user-select: none;
   -webkit-user-drag: none;
   -webkit-app-region: no-drag;
@@ -17,9 +19,10 @@ html body a {
   text-decoration: none;
   cursor: pointer;
 }
-@keyframes round {
+@-webkit-keyframes round {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
     border-radius: 50%;
     width: 170px;
     height: 150px;
@@ -33,8 +36,36 @@ html body a {
     border-radius: 50%;
     width: 170px;
     height: 150px;
-    transform: rotate(365deg);
+    -webkit-transform: rotate(365deg);
+            transform: rotate(365deg);
   }
+}
+@keyframes round {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
+  }
+  50% {
+    border-radius: 40%;
+    width: 140px;
+    height: 120px;
+  }
+  100% {
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
+    -webkit-transform: rotate(365deg);
+            transform: rotate(365deg);
+  }
+}
+html body .no-select {
+  -webkit-user-select: none !important;
+     -moz-user-select: none !important;
+      -ms-user-select: none !important;
+          user-select: none !important;
 }
 html body .small-cursor {
   position: fixed;
@@ -44,11 +75,14 @@ html body .small-cursor {
   width: 170px;
   height: 150px;
   background: var(--mouse-color);
-  filter: blur(85px);
+  -webkit-filter: blur(85px);
+          filter: blur(85px);
   border-radius: 50%;
   pointer-events: none;
+  -webkit-transition: 1s ease-out;
   transition: 1s ease-out;
-  animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+  -webkit-animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+          animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
 }
 html body .medium-title {
   font-size: var(--medium-text);
@@ -79,6 +113,7 @@ html body .medium-form, html body .big-form {
   border-bottom: 1px solid var(--input-border-bot-color);
   border-radius: 5px;
   font-size: 14px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .medium-form:hover, html body .big-form:hover {
@@ -86,6 +121,7 @@ html body .medium-form:hover, html body .big-form:hover {
   background-color: var(--input-bg-hover-color);
   border: 1px solid var(--input-border-color);
   border-bottom: 1px solid var(--input-border-bot-hover-color);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .medium-form:active, html body .medium-form:focus, html body .big-form:active, html body .big-form:focus {
@@ -95,6 +131,7 @@ html body .medium-form:active, html body .medium-form:focus, html body .big-form
   background-color: var(--input-bg-active-color);
   border: 1px solid var(--input-border-active-color);
   border-bottom: 2px solid var(--input-border-bot-active-color);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .info {
@@ -117,7 +154,8 @@ html body header #drag-region {
   left: 0;
   width: 100%;
   height: 31px;
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   z-index: 3;
   -ms-overflow-style: scrollbar;
   -webkit-app-region: drag;
@@ -135,6 +173,8 @@ html body header #drag-region #window-title span {
 }
 html body header #drag-region #window-controls {
   -webkit-app-region: no-drag;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: absolute;
   top: 0;
@@ -166,9 +206,11 @@ html body nav #side-bar {
   left: 0;
   width: 320px;
   height: 100vh;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
   font-size: var(--font-size);
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   z-index: 3;
 }
 html body nav #side-bar .comment #runIcon {
@@ -182,6 +224,7 @@ html body nav #side-bar #active {
 }
 html body nav #side-bar #active:active {
   background-color: var(--nav-selected-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar #active .line {
@@ -198,20 +241,25 @@ html body nav #side-bar #active #settingsIcon, html body nav #side-bar #active #
   margin-left: -4px;
 }
 html body nav #side-bar a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-left: 5px;
   margin-right: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a:hover {
   background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a:active {
   background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body nav #side-bar a img {
@@ -265,9 +313,12 @@ html body .banner {
   height: 46px;
   font-size: 14px;
   border-radius: 3px;
-  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
 }
 html body .banner .banner-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 13px;
   margin-left: 15px;
@@ -343,15 +394,17 @@ html body #error-banner-wifi #error-hide {
   color: var(--text-color);
   background-color: var(--error-banner-button);
   cursor: pointer;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body #error-banner-wifi #error-hide:hover {
   opacity: 0.9;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body #error-banner-wifi #error-hide:active {
   opacity: 0.75;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-
 /*# sourceMappingURL=main.css.map */
