--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -140,6 +140,14 @@ html body .info {
   margin-left: 3px;
   cursor: pointer;
 }
+html body .editProfile {
+  margin-left: 30px;
+}
+html body .editProfile .editProfileIcon {
+  width: 13px;
+  height: 13px;
+  opacity: 0.65;
+}
 html body .openExternal {
   width: 13px;
   height: 13px;
