--- a/REWORK/src/stylesheet/main/main/main.css
+++ b/REWORK/src/stylesheet/main/main/main.css
@@ -140,13 +140,21 @@ html body .info {
   margin-left: 3px;
   cursor: pointer;
 }
-html body .editProfile {
+html body .deleteProfile {
   margin-left: 30px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
-html body .editProfile .editProfileIcon {
+html body .deleteProfile .deleteProfileIcon {
+  margin-top: 3px;
   width: 13px;
   height: 13px;
   opacity: 0.65;
+}
+html body .deleteProfile:hover .deleteProfileIcon {
+  opacity: 0.9;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 html body .openExternal {
   width: 13px;
